# weakpoint

./: .gitignore  README.md  pyproject.toml
demo/: demo.json  jf_demo.json
docs/superpowers/plans/: 2026-04-15-minimal-powerpoint-clone.md  2026-04-16-weakpoint-tui.md
docs/superpowers/specs/: 2026-04-15-minimal-powerpoint-clone-design.md  2026-04-16-weakpoint-tui-design.md
minppt/: __main__.py  app.py  models.py  slide_panel.py  textbox.py  toolbar.py
tests/: conftest.py  test_app.py  test_commands.py  test_image_ascii.py  test_import.py  test_models.py  test_persistence.py  test_render.py  test_widgets.py
tests/tui/: conftest.py  test_app.py  test_commands.py  test_image_ascii.py  test_import.py  test_models.py  test_persistence.py  test_render.py  test_widgets.py
weakpoint/: __main__.py  app.py  ascii_view.py  commands.py  models.py  persistence.py  render.py  slide_panel.py  textbox.py  toolbar.py
weakpoint/screens/: edit_screen.py  present_screen.py
weakpoint/tui/: README.md  __main__.py  app.py  commands.py  image_ascii.py  persistence.py  render.py
weakpoint/tui/screens/: edit_screen.py  present_screen.py
weakpoint/tui/widgets/: command_bar.py  slide_canvas.py  slide_panel.py  status_bar.py
weakpoint/widgets/: slide_canvas.py  slide_panel.py
