[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weakpoint"
version = "0.1.0"
description = "Minimal PowerPoint clone (WeakPoint)"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "textual>=0.80",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["weakpoint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
