[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weakpoint"
version = "0.1.0"
description = "Terminal-only PowerPoint clone with a Vim-style modal UI."
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["weakpoint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
